@@ -1,3 +1,8 @@
+2013-01-15  Pitchumani Sivanupandi  <Pitchumani.S@atmel.com>
+
+	* include/avr/power.h: Specialize clock_prescale_set/get
+	for mega hvb devices
+4
 2013-05-03 Mike Rice <mike@mikerice.name>
 
     * Deleted function iso_weeknum(), replaced with iso_week_date()
